--- a/public/backend/css/project/style.css
+++ b/public/backend/css/project/style.css
@@ -1,81 +1,3 @@
-@font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto/Roboto-Regular.ttf");
-  font-weight: normal;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto/Roboto-Italic.ttf");
-  font-weight: normal;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto/Roboto-Thin.ttf");
-  font-weight: 100;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto/Roboto-ThinItalic.ttf");
-  font-weight: 100;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto/Roboto-Light.ttf");
-  font-weight: 100;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto/Roboto-LightItalic.ttf");
-  font-weight: 100;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto/Roboto-Medium.ttf");
-  font-weight: 500;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto/Roboto-MediumItalic.ttf");
-  font-weight: 500;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto/Roboto-Bold.ttf");
-  font-weight: 700;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto/Roboto-BoldItalic.ttf");
-  font-weight: 700;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto/Roboto-Black.ttf");
-  font-weight: 900;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto/Roboto-BlackItalic.ttf");
-  font-weight: 900;
-  font-style: italic;
-}
-
 * {
   font-family: "Roboto";
 }
@@ -86,13 +8,14 @@
 
 .swiper {
   width: 100%;
+  height: 100%;
   padding-top: 50px;
   padding-bottom: 50px;
 }
 
 .swiper-slide {
-  width: 300px;
-  height: 300px;
+  width: 430px;
+  height: 430px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
