--- a/public/backend/css/style.css
+++ b/public/backend/css/style.css
@@ -140,8 +140,6 @@ h2.section-title-heading {
 
 .navbar.active {
   background-color: #1b396a;
-  -webkit-box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
-          box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -249,9 +247,10 @@ h2.section-title-heading {
 /* ============ Footer =============== */
 #footer {
   background-color: #2b323f;
-  padding-top: 6rem;
+  padding-top: 4rem;
   padding-bottom: 2rem;
   position: relative;
+  font-size: 30px;
 }
 
 #footer .footer-logo img {
@@ -264,12 +263,16 @@ h2.section-title-heading {
 
 #footer .social-icons a {
   margin-right: 10px;
-  color: #8d8c8c;
+  color: white;
 }
 
 .copyright p {
   margin-top: 1rem;
   color: #ffffff;
   font-size: 0.9rem;
+}
+
+.navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show > .nav-link {
+  color: white;
 }
 /*# sourceMappingURL=style.css.map */
