--- a/public/backend/css/style.scss
+++ b/public/backend/css/style.scss
@@ -65,7 +65,7 @@ h2.section-title-heading {
 
     &.active {
         background-color: $TecColor;
-        box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
+        // box-shadow: 1px 2px 10px white;
     }
 }
 
@@ -178,9 +178,10 @@ h2.section-title-heading {
 /* ============ Footer =============== */
 #footer {
     background-color: #2b323f;
-    padding-top: 6rem;
+    padding-top: 4rem;
     padding-bottom: 2rem;
     position: relative;
+    font-size: 30px;
 
     & .footer-logo img {
         margin-top: -4.5rem;
@@ -192,7 +193,7 @@ h2.section-title-heading {
 
     & .social-icons a {
         margin-right: 10px;
-        color: #8d8c8c;
+        color: white;
     }
 }
 
@@ -200,4 +201,8 @@ h2.section-title-heading {
     margin-top: 1rem;
     color: $WhiteColor;
     font-size: 0.9rem;
+}
+
+.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
+    color: white;
 }
